--- a/Final Project/Final Project/style.css
+++ b/Final Project/Final Project/style.css
@@ -65,8 +65,9 @@ body {
 
 .timetablebody button{
   float: right;
-  margin-top: -22px;
+  margin-top: -18px;
   margin-right: 15px;
+  margin-bottom: 2px;
   position: relative;
   cursor: pointer;
   width: auto;
@@ -77,15 +78,15 @@ body {
   opacity: 0.6;
 }
 
-img{
+.button-image {
   max-width: 60px;
   padding: 5px;
 }
 
-
-
 .container img {
   border-radius: 50%;
+  max-width: 60px;
+  padding: 5px;
 }
 
 .secondboxes{
@@ -118,17 +119,18 @@ img{
 }
 
 .chat {
-  margin-top: 180px;
+  margin-top: 200px;
   position: fixed;
   margin-left: 79%;
   max-width: 300px;
   border: 2px solid #666;
   overflow-y: scroll;
-  height: 500px;
+  height: 430px;
 }
 
 .chat button:hover {
   cursor: pointer;
+  background: lightblue;
 }
 
 .container {
@@ -185,34 +187,4 @@ img{
 #right {
   float: right;
   color: #666;
-}
-
-.storyflex {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  flex-basis: 50px;
-  margin-top: 50px;
-}
-
-#storyboxes {
-  height: 200px;
-  width: auto;
-}
-
-.footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-bottom: 10px;
-
-}
-
-#arrow1 {
-  margin-right: :20px;
-}
-
-#arrow2{
-  margin-left: 20px;
 }
