--- a/Final Project/Final Project/css.css
+++ b/Final Project/Final Project/css.css
@@ -282,3 +282,29 @@ body {
         width: 100%;
     }
 }
+
+.storyflex {
+  display: flex;
+  justify-content:flex-start;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 50px;
+}
+
+#storyboxes {
+  height:150px;
+}
+
+.footer {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#arrow1 {
+  padding-right: 20px;
+}
+
+#arrow2 {
+  padding-left: 20px;
+}
