--- a/Final Project/Final Project/css.css
+++ b/Final Project/Final Project/css.css
@@ -65,7 +65,7 @@ body {
   text-align: center;
   padding: 5%;
   border-radius: 50%;
-  background: lightcyan;
+  background: lightpink;
   z-index: 0;
 }
 
