--- a/Final Project/Final Project/Safe Space.css
+++ b/Final Project/Final Project/Safe Space.css
@@ -1,19 +1,28 @@
 body{
-  background-color:black;
-  margin: 0;
-  padding: 0;
-  font-family: Helvetica;
+background-color: black;
+color: white;
+}
+
+#Audio{
+  display: none;
+}
+
+@keyframes go-left-right {      
+  from { left: -290px; }
+  to { left: calc(50% - 10px); }
+}
+
+.train {
+  animation: go-left-right 20s infinite alternate;
+  position: relative;
+}
+
+.feelbutton{
   text-align:center;
-  color: white;
 }
-.train{
-  margin: 80px;
-}
+
 .button {
-    position: absolute;
-    color: black;
-    padding: 15px 32px;
-    text-align: center;
-    font-size: 16px;
-    transform: translate(-50%, 50%);
+  color: black;
+  padding: 15px 32px;
+  font-size: 16px;
 }
