--- a/Final Project/Final Project/css.css
+++ b/Final Project/Final Project/css.css
@@ -18,9 +18,9 @@ body {
 }
 
 .header {
-  margin-top: -13px;
-  margin-bottom: -10px;
-  margin-right: 5px;
+  margin-top: -0.7%;
+  margin-bottom: 0%;
+  margin-right: 0%;
   max-width: 100%;
   background-color: #779ecb;
   text-align: center;
@@ -47,7 +47,7 @@ body {
 
 .midcontent {
   width: 65.5%;
-  margin-top: 20%;
+  margin-top: 18%;
   margin-left: 20%;
 }
 
@@ -144,13 +144,13 @@ body {
 }
 
 .chat {
-  margin-top: -33%;
+  margin-top: -31%;
   position: fixed;
   margin-left: 79%;
   max-width: 20%;
   border: 2px solid #666;
   overflow-y: scroll;
-  height: 68%;
+  height: 65.8%;
 }
 
 .chat button:hover {
