Chat cover whole page when scrolling down

--- a/Final Project/Final Project/css.css
+++ b/Final Project/Final Project/css.css
@@ -290,6 +290,11 @@ body {
     box-sizing: border-box;
 }
 
+.sticky {
+  position: fixed;
+  height: 100%;
+}
+
 .box {
     padding: 0 6px;
     float: left;
@@ -311,9 +316,12 @@ body {
 }
 
 .storyflex {
+  color: #666;
+  text-transform: uppercase;
   position: relative;
   width: 60%;
   margin-left: 14%;
+  padding-left: 10%;
   margin-right: 20%;
   display: flex;
   justify-content:flex-start;
@@ -331,6 +339,7 @@ body {
   width: 60%;
   margin-left: 14%;
   margin-right: 20%;
+  padding-left: 10%;
   display:flex;
   justify-content: center;
   align-items: center;
