--- a/Final Project/Final Project/css.css
+++ b/Final Project/Final Project/css.css
@@ -145,6 +145,13 @@ body {
   background-color: #ccc;
 }
 
+#home {
+  background-color: darkblue;
+  border-radius: 50%;
+  padding: 5px;
+  opacity: 0.7;
+}
+
 .chat {
   bottom: 0%;
   position: fixed;
