--- a/Final Project/Final Project/css.css
+++ b/Final Project/Final Project/css.css
@@ -146,7 +146,7 @@ body {
 }
 
 #home {
-  background-color: darkblue;
+  background-color: red;
   border-radius: 50%;
   padding: 5px;
   opacity: 0.7;
