Masse pene forandringer

--- a/Final Project/Final Project/css.css
+++ b/Final Project/Final Project/css.css
@@ -2,6 +2,13 @@ body {
   font-family: Helvetica;
 }
 
+.header h1 {
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  letter-spacing: 4px;
+}
+
 .header h2{
   padding-top: 4px;
   color: white;
@@ -307,7 +314,7 @@ body {
     padding: 0 6px;
     float: left;
     width: 25%;
-    background-color: lightgoldenrodyellow;
+    background-color: white;
 }
 
 @media only screen and (max-width: 700px) {
@@ -359,4 +366,108 @@ body {
 
 #arrow2 {
   padding-left: 20px;
+}
+
+}
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/8 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+#header-languagecomp {
+  background-color: lightsteelblue;
+}
+
+.language-container {
+  margin-top: -0.3%;
+  width: 65.5%;
+  margin-left: 14%;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
