--- a/Final Project/Final Project/css.css
+++ b/Final Project/Final Project/css.css
@@ -2,13 +2,6 @@ body {
   font-family: Helvetica;
 }
 
-.header h1 {
-  color: white;
-  text-transform: uppercase;
-  font-size: 20px;
-  letter-spacing: 4px;
-}
-
 .header h2{
   padding-top: 4px;
   color: white;
@@ -25,7 +18,7 @@ body {
 }
 
 .header {
-  margin-top: -0.8%;
+  margin-top: -0.7%;
   margin-bottom: 0%;
   margin-right: 0%;
   max-width: 100%;
@@ -35,10 +28,10 @@ body {
 }
 
 .timetable {
-  position: relative;
+  position: fixed;
   display: grid;
-  width: 86.2%;
-  margin-left: 13.6%;
+  width: 85.5%;
+  margin-left: 13%;
   height: auto;
   grid-template-columns: 1fr 2fr 3fr;
   color: #666;
@@ -54,8 +47,8 @@ body {
 
 .midcontent {
   width: 65.5%;
-  margin-top: 4.5%;
-  margin-left: 17%;
+  margin-top: 18%;
+  margin-left: 20%;
 }
 
 .midcontent h2{
@@ -70,7 +63,7 @@ body {
   position: relative;
   margin-top: -10%;
   text-align: center;
-  padding: 6%;
+  padding: 5%;
   border-radius: 50%;
   background: lightpink;
   z-index: 0;
@@ -126,8 +119,6 @@ body {
 }
 
 #navigationbar{
-  position: relative;
-  margin-top: -93%;
   max-width: 100%;
   border-top: 2px solid #666;
   border-left: 2px solid #666;
@@ -152,22 +143,15 @@ body {
   background-color: #ccc;
 }
 
-#home {
-  background-color: red;
-  border-radius: 50%;
-  padding: 5px;
-  opacity: 0.7;
-}
-
 .chat {
-  background-color: #779ecb;
+  z-index: 1;
   bottom: 0%;
   position: fixed;
   margin-left: 79%;
   max-width: 20%;
   border: 2px solid #666;
   overflow-y: scroll;
-  height: 67.1%;
+  height: 70%;
 }
 
 .chat button:hover {
@@ -217,7 +201,7 @@ body {
 }
 
 .chat-header {
-  background-color: #666;
+  background-color: #779ecb;
   margin-top: -15px;
 }
 
@@ -294,10 +278,9 @@ body {
 }
 
 .mood-container {
-  position: relative;
-  margin-top: 0.7%;
-  width: 65.7%;
-  margin-left: 14%;
+  width: 60%;
+  margin-left: 15%;
+  margin-top: 14%;
   background-color: lightgoldenrodyellow;
 }
 
@@ -305,16 +288,11 @@ body {
     box-sizing: border-box;
 }
 
-.sticky {
-  position: fixed;
-  height: 100%;
-}
-
 .box {
     padding: 0 6px;
     float: left;
     width: 25%;
-    background-color: white;
+    background-color: lightgoldenrodyellow;
 }
 
 @media only screen and (max-width: 700px) {
@@ -331,18 +309,11 @@ body {
 }
 
 .storyflex {
-  color: #666;
-  text-transform: uppercase;
-  position: relative;
-  width: 60%;
-  margin-left: 14%;
-  padding-left: 10%;
-  margin-right: 20%;
   display: flex;
   justify-content:flex-start;
   align-items: center;
   flex-direction: column;
-  padding-top: 5%;
+  padding-top: 50px;
 }
 
 #storyboxes {
@@ -350,11 +321,6 @@ body {
 }
 
 .footer {
-  position: relative;
-  width: 60%;
-  margin-left: 14%;
-  margin-right: 20%;
-  padding-left: 10%;
   display:flex;
   justify-content: center;
   align-items: center;
@@ -368,12 +334,22 @@ body {
   padding-left: 20px;
 }
 
+/* spør imorgen
+.lang-header {
+  max-width: 1000px;
+  width: 60%;
+  margin-left: 15%;
+  margin-top: 15%;
+  position: relative;
 }
-/* Slideshow container */
+*/
+
 .slideshow-container {
   max-width: 1000px;
+  width: 60%;
+  margin-left: 15%;
+  margin-top: 14%;
   position: relative;
-  margin: auto;
 }
 
 /* Hide the images by default */
@@ -426,16 +402,6 @@ body {
   padding: 8px 12px;
   position: absolute;
   top: 0;
-}
-
-#header-languagecomp {
-  background-color: lightsteelblue;
-}
-
-.language-container {
-  margin-top: -0.3%;
-  width: 65.5%;
-  margin-left: 14%;
 }
 
 /* The dots/bullets/indicators */
