--- a/Final Project/Final Project/css.css
+++ b/Final Project/Final Project/css.css
@@ -346,10 +346,11 @@ body {
 
 .slideshow-container {
   max-width: 1000px;
-  width: 60%;
-  margin-left: 15%;
-  margin-top: 14%;
-  position: relative;
+  width: 67%;
+  height:30%;
+  margin-left: 13%;
+  margin-top: 13%;
+  position: absolute;
 }
 
 /* Hide the images by default */
