--- a/Final Project/Final Project/style2.css
+++ b/Final Project/Final Project/style2.css
@@ -137,3 +137,21 @@ body {font-size:16px;}
   color: #68E373;
   margin-left: 5px;
 }
+
+.resizeS {
+  background-color: white;
+  font-size: 100%;
+  color: black;
+  float: right;
+  width: 40px;
+  height: 40px;
+}
+
+.resizeL {
+  background-color: white;
+  font-size: 200%;
+  color: black;
+  float: right;
+  width: 40px;
+  height: 40px;
+}
