--- a/Final Project/Final Project/css.css
+++ b/Final Project/Final Project/css.css
@@ -344,6 +344,21 @@ body {
 }
 */
 
+
+.homework {
+  background-color: #779ecb;
+  color: white;
+  font-size: 16px;
+  display: inline-block;
+  border-radius: 8px;
+  margin-top: 15%;
+  margin-left: 15px;
+}
+
+.homework:hover{
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
 .slideshow-container {
   max-width: 1000px;
   width: 67%;
