--- a/Final Project/Final Project/css.css
+++ b/Final Project/Final Project/css.css
@@ -2,6 +2,13 @@ body {
   font-family: Helvetica;
 }
 
+.header h1 {
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  letter-spacing: 4px;
+}
+
 .header h2{
   padding-top: 4px;
   color: white;
@@ -18,7 +25,7 @@ body {
 }
 
 .header {
-  margin-top: -0.7%;
+  margin-top: -0.8%;
   margin-bottom: 0%;
   margin-right: 0%;
   max-width: 100%;
@@ -28,10 +35,10 @@ body {
 }
 
 .timetable {
-  position: fixed;
+  position: relative;
   display: grid;
-  width: 85.5%;
-  margin-left: 13%;
+  width: 86.2%;
+  margin-left: 13.6%;
   height: auto;
   grid-template-columns: 1fr 2fr 3fr;
   color: #666;
@@ -47,8 +54,8 @@ body {
 
 .midcontent {
   width: 65.5%;
-  margin-top: 18%;
-  margin-left: 20%;
+  margin-top: 4.5%;
+  margin-left: 17%;
 }
 
 .midcontent h2{
@@ -63,7 +70,7 @@ body {
   position: relative;
   margin-top: -10%;
   text-align: center;
-  padding: 5%;
+  padding: 6%;
   border-radius: 50%;
   background: lightpink;
   z-index: 0;
@@ -94,13 +101,14 @@ body {
   margin-right: 15px;
   margin-bottom: 2px;
   position: relative;
+  text-transform: uppercase;
   cursor: pointer;
   width: auto;
   background-color: #eee;
 }
 
 .timetablebody button:hover {
-  opacity: 0.6;
+  background-color: lightgreen;
 }
 
 .button-image{
@@ -109,9 +117,9 @@ body {
 }
 
 .container img {
-  border-radius: 50%;
   max-width: 60px;
   padding: 5px;
+  border-radius: 50%;
 }
 
 .secondboxes{
@@ -119,6 +127,8 @@ body {
 }
 
 #navigationbar{
+  position: relative;
+  margin-top: -93%;
   max-width: 100%;
   border-top: 2px solid #666;
   border-left: 2px solid #666;
@@ -143,44 +153,46 @@ body {
   background-color: #ccc;
 }
 
+#home {
+  background-color: red;
+  border-radius: 50%;
+  padding: 5px;
+  opacity: 0.7;
+}
+
 .chat {
-  z-index: 1;
+  background-color: #779ecb;
   bottom: 0%;
   position: fixed;
   margin-left: 79%;
   max-width: 20%;
   border: 2px solid #666;
   overflow-y: scroll;
-  height: 70%;
+  height: 67.1%;
 }
-@media only screen and (max-width: 600px) {
-    .chat {
-        display: none;
-    }
+
+@media screen and (max-width: 800px) {
+  .chat {
+    display: none;
+  }
 }
 
 .chat button:hover {
   cursor: pointer;
-  background: lightblue;
+  background: lightgreen;
 }
 
 .container {
-    border: 2px solid #A0A0A0;
+    padding: 25px;
+    border: 1px solid #666;
     background-color: #f1f1f1;
-    border-radius: 7px;
-    padding: 10px;
     margin: 5px 5px;
+    border-radius: 10%;;
 }
 
 #dark {
-  border: 2px solid #779ecb;
+  border: 1px solid #666;
   background-color: #E4F6F8;
-}
-
-.container::after {
-  content: "";
-  clear: both;
-  display: table;
 }
 
 .chat h3{
@@ -206,8 +218,12 @@ body {
 }
 
 .chat-header {
-  background-color: #779ecb;
+  background-color: #666;
   margin-top: -15px;
+}
+
+.chat button {
+  border: 2px solid #666;
 }
 
 .time {
@@ -270,7 +286,6 @@ body {
 }
 
 #mood h2 {
-    font-family: sans-serif;
     font-size: 60px;
     background-color: lightpink;
     padding: 20px;
@@ -283,9 +298,10 @@ body {
 }
 
 .mood-container {
-  width: 60%;
-  margin-left: 15%;
-  margin-top: 14%;
+  position: relative;
+  margin-top: 0.7%;
+  width: 65.7%;
+  margin-left: 14%;
   background-color: lightgoldenrodyellow;
 }
 
@@ -293,11 +309,16 @@ body {
     box-sizing: border-box;
 }
 
+.sticky {
+  position: fixed;
+  height: 100%;
+}
+
 .box {
     padding: 0 6px;
     float: left;
     width: 25%;
-    background-color: lightgoldenrodyellow;
+    background-color: white;
 }
 
 @media only screen and (max-width: 700px) {
@@ -314,11 +335,18 @@ body {
 }
 
 .storyflex {
+  color: #666;
+  text-transform: uppercase;
+  position: relative;
+  width: 60%;
+  margin-left: 14%;
+  padding-left: 10%;
+  margin-right: 20%;
   display: flex;
   justify-content:flex-start;
   align-items: center;
   flex-direction: column;
-  padding-top: 50px;
+  padding-top: 5%;
 }
 
 #storyboxes {
@@ -326,6 +354,11 @@ body {
 }
 
 .footer {
+  position: relative;
+  width: 60%;
+  margin-left: 14%;
+  margin-right: 20%;
+  padding-left: 10%;
   display:flex;
   justify-content: center;
   align-items: center;
@@ -339,31 +372,26 @@ body {
   padding-left: 20px;
 }
 
-/* spør imorgen
-.lang-header {
-  max-width: 1000px;
-  width: 60%;
-  margin-left: 15%;
-  margin-top: 15%;
-  position: relative;
 }
-*/
-
 
 .homework-container {
-  margin-top: 13%;
-  margin-left: 15%;
-  width: 67%
+
 }
 
 .homework-slides {
-
+  margin-top: 0%;
+  margin-left: 13%;
+  width: 67%;
 
 }
 
 .homework {
   display: none;
+  height: 100%
+  width: 50%;
 }
+
+
 
 
 /* Next & previous buttons */
@@ -411,6 +439,16 @@ body {
   padding: 8px 12px;
   position: absolute;
   top: 0;
+}
+
+#header-languagecomp {
+  background-color: lightsteelblue;
+}
+
+.language-container {
+  margin-top: -0.3%;
+  width: 65.5%;
+  margin-left: 14%;
 }
 
 /* The dots/bullets/indicators */
