--- a/Final Project/Final Project/Signin.css
+++ b/Final Project/Final Project/Signin.css
@@ -5,7 +5,7 @@ body{
 }
 
 .background{
-  background: url("animals1.jpg") no-repeat center center fixed;
+  background: url("Pictures/animals1.jpg") no-repeat center center fixed;
   background-size: cover;
   width: 100%;
   opacity: 0.9;
