--- a/Final Project/Final Project/css.css
+++ b/Final Project/Final Project/css.css
@@ -34,7 +34,41 @@ body {
   height: 12%;
 }
 
+.header .btn {
+  cursor: pointer;
+  z-index: 1;
+  position: absolute;
+}
+
+#rightside {
+  margin-left: 85%;
+  margin-top: -2%;
+}
+
+#leftside {
+  left:5%;
+  top: 4%;
+  z-index: 1;
+}
+
+.header a{
+  text-decoration: none;
+}
+
+.btn h3{
+  text-transform: uppercase;
+  color: gray;
+}
+
+.header button:hover {
+  background-color: lightgreen;
+  cursor: pointer;
+}
+
+
 .timetable {
+  display: grid;
+  grid-template-columns: auto auto auto;
   position: relative;
   display: grid;
   width: 86.2%;
@@ -46,7 +80,7 @@ body {
   border-right: 1px solid #666;
 }
 
-.columntitle h4 {
+.border h4 {
   margin: 6px 6px;
   text-transform: uppercase;
   color: #666;
@@ -76,7 +110,7 @@ body {
   z-index: 0;
 }
 
-.columntitle{
+.border{
   position: relative;
   border-top: 2px solid #666;
   border-bottom: 2px solid #666;
@@ -85,17 +119,18 @@ body {
   background-color: #eee;
 }
 
-.timetablebody h5 {
+
+.border2 h5 {
   margin: 3px 3px;
   text-transform: uppercase;
 }
 
-.timetablebody {
+.border2 {
   border-bottom: 1px solid #666;
   border-left: 1px solid #666;
 }
 
-.timetablebody button{
+.border2 button{
   float: right;
   margin-top: -18px;
   margin-right: 15px;
@@ -107,7 +142,7 @@ body {
   background-color: #eee;
 }
 
-.timetablebody button:hover {
+.border2 button:hover {
   background-color: lightgreen;
 }
 
@@ -129,8 +164,7 @@ body {
 #navigationbar{
   position: relative;
   margin-top: -93%;
-  right: 0%;
-  width: auto;
+  max-width: 100%;
   border-top: 2px solid #666;
   border-left: 2px solid #666;
   border-right: 2px solid #666;
@@ -373,13 +407,16 @@ body {
   padding-left: 20px;
 }
 
+}
+
 .homework-container {
-  margin-left: 13.7%;
+
 }
 
 .homework-slides {
   margin-top: 0%;
-  width: 100%;
+  margin-left: 13%;
+  width: 67%;
 
 }
 
