--- a/Final Project/Final Project/css.css
+++ b/Final Project/Final Project/css.css
@@ -34,7 +34,47 @@ body {
   height: 12%;
 }
 
+.header .btn {
+  cursor: pointer;
+  z-index: 1;
+  position: absolute;
+}
+
+#rightside {
+  margin-left: 85%;
+  margin-top: -2%;
+}
+
+#leftside {
+  left:5%;
+  top: 4%;
+  z-index: 1;
+}
+
+.header a{
+  text-decoration: none;
+}
+
+.btn {
+  margin-top: -15px;
+  padding: 5px;
+  text-transform: uppercase;
+  font-size: 15px;
+  color: #666;
+  background-color: white;
+  border: 1px solid #666;
+}
+
+button:hover {
+  background-color: lightgreen;
+  cursor: pointer;
+}
+
+
 .timetable {
+  float: right;
+  display: grid;
+  grid-template-columns: auto auto auto;
   position: relative;
   display: grid;
   width: 86.2%;
@@ -46,15 +86,20 @@ body {
   border-right: 1px solid #666;
 }
 
-.columntitle h4 {
+.border h4 {
   margin: 6px 6px;
   text-transform: uppercase;
   color: #666;
 }
 
 .midcontent {
+  position: relative;
+  float: left;
+  max-width: 100%;
   width: 65.5%;
-  margin-top: 4.5%;
+  padding-top: 4%;
+  margin-top: inherit;
+  top: 50%;
   margin-left: 17%;
 }
 
@@ -68,6 +113,7 @@ body {
 
 .midcontent img {
   position: relative;
+  max-width: 100%;
   margin-top: -10%;
   text-align: center;
   padding: 6%;
@@ -76,7 +122,7 @@ body {
   z-index: 0;
 }
 
-.columntitle{
+.border{
   position: relative;
   border-top: 2px solid #666;
   border-bottom: 2px solid #666;
@@ -85,17 +131,18 @@ body {
   background-color: #eee;
 }
 
-.timetablebody h5 {
+
+.border2 h5 {
   margin: 3px 3px;
   text-transform: uppercase;
 }
 
-.timetablebody {
+.border2 {
   border-bottom: 1px solid #666;
   border-left: 1px solid #666;
 }
 
-.timetablebody button{
+.border2 button{
   float: right;
   margin-top: -18px;
   margin-right: 15px;
@@ -107,7 +154,7 @@ body {
   background-color: #eee;
 }
 
-.timetablebody button:hover {
+.border2 button:hover {
   background-color: lightgreen;
 }
 
@@ -123,12 +170,13 @@ body {
 }
 
 .secondboxes{
-  position: fixed;
+  position: absolute;
+  max-width: 14%;
 }
 
 #navigationbar{
   position: relative;
-  margin-top: -93%;
+/*  margin-top: -93%;*/
   max-width: 100%;
   border-top: 2px solid #666;
   border-left: 2px solid #666;
@@ -299,7 +347,7 @@ body {
 
 .mood-container {
   position: relative;
-  margin-top: 0.7%;
+  margin-top: 13.3%;
   width: 65.7%;
   margin-left: 14%;
   background-color: lightgoldenrodyellow;
@@ -380,18 +428,16 @@ body {
 
 .homework-slides {
   margin-top: 0%;
-  margin-left: 13%;
-  width: 67%;
+  margin-left: 13.9%;
+  width: 66%;
 
 }
 
 .homework {
   display: none;
-  height: 100%
-  width: 50%;
+  height: 100%;
+  width: 100%;
 }
-
-
 
 
 /* Next & previous buttons */
