--- a/Final Project/Final Project/style2.css
+++ b/Final Project/Final Project/style2.css
@@ -138,6 +138,15 @@ body {font-size:16px;}
   margin-left: 5px;
 }
 
+button{
+  color: lightgrey;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: lightgreen;
+}
+
 .resizeS {
   background-color: white;
   font-size: 100%;
@@ -147,6 +156,10 @@ body {font-size:16px;}
   height: 40px;
 }
 
+a {
+  text-decoration: none;
+  color: #666;
+}
 
 .resizeL {
   background-color: white;
@@ -155,4 +168,9 @@ body {font-size:16px;}
   float: right;
   width: 40px;
   height: 40px;
+}
+
+.references {
+  float: left;
+  border-top: 1px solid black;
 }
