--- a/Final Project/Final Project/css.css
+++ b/Final Project/Final Project/css.css
@@ -17,6 +17,21 @@ body {
   letter-spacing: 3px;
 }
 
+.btn {
+  margin-top: -15px;
+  padding: 5px;
+  text-transform: uppercase;
+  font-size: 15px;
+  color: #666;
+  background-color: white;
+  border: 1px solid #666;
+}
+
+button:hover {
+  background-color: lightgreen;
+  cursor: pointer;
+}
+
 .header h3{
   color: white;
   font-size: 10px;
