--- a/Final Project/Final Project/style2.css
+++ b/Final Project/Final Project/style2.css
@@ -148,6 +148,10 @@ button {
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
+a button{
+  text-decoration: none;
+}
+
 button:hover {
   background-color: lightgreen;
 }
@@ -168,4 +172,9 @@ button:hover {
   float: right;
   width: 40px;
   height: 40px;
+}
+
+.references{
+  border-top: 2px solid #666;
+  margin-left: 18%;
 }
